
PROJECT(DDServer)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)


MESSAGE(${PROJECT_BINARY_DIR})



AUX_SOURCE_DIRECTORY(. SRC_LIST)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../install-l53/lib)
#LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../luajitmp/lib)
#LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../install-l52/lib)

ADD_EXECUTABLE(DDServer ${SRC_LIST})

INCLUDE_DIRECTORIES(boost)

INCLUDE_DIRECTORIES(install-l53/include)


TARGET_LINK_LIBRARIES(DDServer pthread dl)
#TARGET_LINK_LIBRARIES(DDServer libluajit-5.1.a libh1.a)
TARGET_LINK_LIBRARIES(DDServer liblua.a)


SET( CMAKE_BUILD_TYPE Debug )
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
